# yaml2sbml

./: .codacy.yml  .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTE.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  format_documentation.md  requirements.txt  run_flake8.sh  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  ci_push.yml  deploy.yml  install_deps.sh
doc/: api_doc.rst  conf.py  contact.rst  deploy.rst  format_documentation.md  format_documentation.rst  format_specification.rst  index.rst  install.rst  license.rst  logo.rst  release_notes.rst  requirements_docs.txt
doc/JOSS_paper/: paper.bib  paper.md
doc/examples/: README.md  examples.rst  format_features.ipynb  lotka_volterra.ipynb  lotka_volterra_CLI.ipynb
doc/examples/Finite_State_Projection/: Finite_State_Projection.ipynb  utils.py
doc/examples/Format_Features/: Format_Features.ipynb  simulation_and_plotting.py  step_function.yml  time_dependent_rhs.yml
doc/examples/Lotka_Volterra/Lotka_Volterra_Model_Editor/: Lotka_Volterra_Model_Editor.ipynb
doc/examples/Lotka_Volterra/Lotka_Volterra_python/: Lotka_Volterra.ipynb  Lotka_Volterra_PEtab.yml  Lotka_Volterra_basic.yml
doc/examples/Lotka_Volterra/Lotka_Volterra_python/Lotka_Volterra_PEtab/: measurement_table.tsv
doc/examples/Lotka_Volterra_CLI/: Lotka_Volterra_CLI.ipynb
doc/examples/Lotka_Volterra_Model_Editor/: Lotka_Volterra_Model_Editor.ipynb
doc/examples/Lotka_Volterra_python/: Lotka_Volterra.ipynb
doc/examples/Sorensen/: Sorensen1985.yaml  utils.py  yaml2sbml_Sorensen.ipynb
examples/: README.md  ode_input1.yaml
examples/Format_Features/: Format_Features.ipynb  functions_in_rhs.xml  functions_in_rhs.yml  simulation_and_plotting.py  step_function.xml  step_function.yml  time_dependent_rhs.xml  time_dependent_rhs.yml
examples/Lotka_Volterra_CLI/: Lotka_Volterra_CLI.ipynb  Lotka_Volterra_PEtab.yml
examples/Lotka_Volterra_CLI/Lotka_Volterra_PEtab/: measurement_table.tsv
examples/Lotka_Volterra_python/: Lotka_Volterra_PEtab.yml  Lotka_Volterra_basic.yml
tests/: __init__.py  testYaml2PEtab.py  testYamlImport.py  test_CLI.py  test_CLI.sh  test_YamlModel.py  test_yaml2petab.py  test_yaml2sbml.py  test_yaml_validation.py
tests/test_yaml2sbml/: ode_input1.yaml  ode_input2.yaml  ode_input_empty_section.yaml  ode_input_invalid_SBML_identifier.yaml  ode_input_invalid_formula.yaml  ode_input_invalid_time_1.yaml  ode_input_invalid_time_2.yaml  ode_input_typos.yaml  ode_input_typos_required.yaml  true_sbml_output.xml
yaml2sbml/: YamlModel.py  __init__.py  version.py  yaml2PEtab.py  yaml2sbml.py  yaml_schema.yaml  yaml_validation.py
yaml2sbml/tests/: testYaml2PEtab.py  testYaml2SBML.py
yaml2sbml/tests/test_yaml2sbml/: ode_input1.yaml  ode_input2.yaml  true_sbml_output.xml  true_sbml_output1.xml  true_sbml_output2.xml
