##########################
# Setup.py Configuration #
##########################

[metadata]
name = yaml2sbml
version = attr: yaml2sbml.version.__version__
description = A small package to convert ODEs psecified in a YAML file to SBML/PEtab
long_description = file: README.md
long_description_content_type = text/markdown

# URLs
url = https://github.com/yaml2sbml-dev/yaml2sbml
download_url = https://github.com/yaml2sbml-dev/yaml2sbml/releases
project_urls =
    Bug Tracker = https://github.com/yaml2sbml-dev/yaml2sbml/issues
    Documentation = https://yaml2sbml.readthedocs.io
    Changelog = https://yaml2sbml.readthedocs.io/en/latest/release_notes.html

# Author information
author = Jakob Vanhoefer, Marta R. A. Matos, Dilan Pathirana, Yannik Schälte
author_email = jakob.vanhoefer@uni-bonn.de,marta.ra.matos@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = YAML, SBML, PEtab, ODE

[options]
install_requires =
    numpy >= 1.19.4
    scipy >= 1.6.0
    pandas >= 1.0.1
    PyYAML >= 5.1
    python-libsbml >= 5.18.0
    petab >= 0.1.4

zip_safe = False
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:

[options.extras_require]
examples =
    amici >= 0.11.11
    matplotlib >= 3.1.0
doc =
    sphinx >= 3.4.3
    nbsphinx >= 0.8.0
    nbconvert >= 6.0.7
    sphinx-rtd-theme >= 0.5.1
    sphinx_autodoc_typehints >= 1.11.1
test =
    amici >= 0.11.11
    pypesto >= 0.2.2
    matplotlib >= 3.1.0
    nbmake >= 0.1.0
style =
    flake8 >= 3.8.3
    flake8-colors >= 0.1.6

[options.entry_points]
console_scripts =
    yaml2sbml = yaml2sbml.yaml2sbml:_main
    yaml2petab = yaml2sbml.yaml2PEtab:main
    yaml2sbml_validate = yaml2sbml.yaml_validation:main

[bdist_wheel]
# Requires python 3
universal = False
